--- a/src/index.html
+++ b/src/index.html
@@ -8,88 +8,21 @@
   <h1></h1>
 </head>
 <body>
-  <form>
+  <form id="task-form">
  <input type="text" id = 'email' name = 'email' placeholder="E-mail"> 
  <input type="password" id = 'password' name="password" placeholder="Password"> 
  <input type="submit" id = 'sign_up' name = 'sign_up_submit' value="Crear cuenta"> 
- <input type="submit" id = 'login' name = 'login' value="Log In"> 
 </form>
+
+<form id="login-form">
+  <input type="text" id = 'log_email' name = 'email' placeholder="E-mail"> 
+  <input type="password" id = 'log_password' name="password" placeholder="Password"> 
+  <input type="submit" id = 'login' name = 'login' value="Log In"> 
+ </form>
  <script type="module" src="main.js"></script>
-  <script type="module">
-
-//import { getAnalytics } from 'firebase/analytics';
-// import { myFunction } from './lib/index.js';
-import { initializeApp } from 'https://www.gstatic.com/firebasejs/9.6.8/firebase-app.js';
-import { getDatabase, set, ref, update } from 'https://www.gstatic.com/firebasejs/9.6.8/firebase-database.js';
-import { getAuth, createUserWithEmailAndPassword, signInWithEmailAndPassword } from 'https://www.gstatic.com/firebasejs/9.6.8/firebase-auth.js';
-
-// Import the functions you need from the SDKs you need
-
-// TODO: Add SDKs for Firebase products that you want to use
-// https://firebase.google.com/docs/web/setup#available-libraries
-
-// Your web app's Firebase configuration
-// For Firebase JS SDK v7.20.0 and later, measurementId is optional
-const firebaseConfig = {
-  apiKey: 'AIzaSyAiKKsrEJpCx8NgpvvcNp1dykxNjEyzqe0',
-  authDomain: 'redsocialmascotasars.firebaseapp.com',
-  projectId: 'redsocialmascotasars',
-  storageBucket: 'redsocialmascotasars.appspot.com',
-  messagingSenderId: '193884625743',
-  appId: '1:193884625743:web:0089978f1ca3f84fcc433a',
-  measurementId: 'G-97XRHHD647',
-};
-
-// Initialize Firebase
-const app = initializeApp(firebaseConfig);
-//const analytics = getAnalytics(app);
-const database = getDatabase(app);
-const auth = getAuth();
-
-sign_up.addEventListener('click', (e) =>{
-
-var email = document.getElementById('email').value;
-var password= document.getElementById('password').value;
-//let email = document.getElementById('').value;
-createUserWithEmailAndPassword(auth, email, password)
-  .then((userCredential) => {
-    // Signed in
-    const user = userCredential.user;
-    // ...
-    set(ref(database, 'users/' + user.uid),{
-      email: email
-    })
-    alert("Usuario creado!");
-  })
-  .catch((error) => {
-    const errorCode = error.code;
-    const errorMessage = error.message;
-    alert(errorMessage);
-    // ..
-  });
-});
-
-
-login.addEventListener ('click', (e) =>{
-  var email = document.getElementById('email').value;
-  var password= document.getElementById('password').value;
-  signInWithEmailAndPassword(auth, email, password)
-  .then((userCredential) => {
-    // Signed in
-    const user = userCredential.user;
-    // ...
-    const dt = new Date ();
-    update(ref(database, 'users/' + user.uid),{
-      last_login: dt,
-    })
-  })
-  .catch((error) => {
-    const errorCode = error.code;
-    const errorMessage = error.message;
-  });
-})
-
-
-</script>
+ <script type="module" src="firebase.js"></script>
+<br><br><br>
+ <button id ='logout'>Logout</button>
+  
 </body>
 </html>
