--- a/src/index.html
+++ b/src/index.html
@@ -19,6 +19,8 @@
   <input type="password" id = 'log_password' name="password" placeholder="Password"> 
   <input type="submit" id = 'login' name = 'login' value="Log In"> 
  </form>
+ <button type= 'button' class='btn btn-secondary btn-block' id = 'googleLogin'>
+  Iniciar Sesión con Google</button>
  <script type="module" src="main.js"></script>
  <script type="module" src="firebase.js"></script>
 <br><br><br>
