--- a/src/index.html
+++ b/src/index.html
@@ -4,27 +4,43 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="styles.css">
   <title>iCarePets</title>
   <h1></h1>
 </head>
-<body>
-  <form id="task-form">
- <input type="text" id = 'email' name = 'email' placeholder="E-mail"> 
- <input type="password" id = 'password' name="password" placeholder="Password"> 
- <input type="submit" id = 'sign_up' name = 'sign_up_submit' value="Crear cuenta"> 
-</form>
 
-<form id="login-form">
-  <input type="text" id = 'log_email' name = 'email' placeholder="E-mail"> 
-  <input type="password" id = 'log_password' name="password" placeholder="Password"> 
+
+<body>
+  <header id="img">
+    <img  id="logo" src="imagenes/logo_large.png" alt="Logo" width="200px" height="180px">
+  </header>
+
+  <div id="welcomeText">
+<h1>¡Bienvenidx a la comunidad amante de las mascotas!</h1>
+</div>
+
+<div id="container1">
+
+  <input type="text" class="mailAndPass" id = 'log_email' name = 'email' placeholder="E-mail"> 
+  <input type="password" class="mailAndPass" id = 'log_password' name="password" placeholder="Password"> 
   <input type="submit" id = 'login' name = 'login' value="Log In"> 
- </form>
- <button type= 'button' class='btn btn-secondary btn-block' id = 'googleLogin'>
+  <br><br><br>
+ <button id ='logout'>Logout</button>
+
+</div>
+
+<button type= 'button' class='btn btn-secondary btn-block' id = 'googleLogin'>
   Iniciar Sesión con Google</button>
+
+  <form id="task-form">
+    <input type="text" class="mailAndPass" id = 'email' name = 'email' placeholder="E-mail"> 
+    <input type="password" class="mailAndPass" id = 'password' name="password" placeholder="Password"> 
+    <input type="submit" id = 'sign_up' name = 'sign_up_submit' value="Crear cuenta"> 
+   </form>
+
  <script type="module" src="main.js"></script>
  <script type="module" src="firebase.js"></script>
-<br><br><br>
- <button id ='logout'>Logout</button>
+
   
 </body>
 </html>
