--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
 
 
 <body>
-  <header id="img">
+  <!-- <header id="img">
     <img  id="logo" src="imagenes/logo_large.png" alt="Logo" width="200px" height="180px">
   </header>
 
@@ -36,9 +36,9 @@
     <input type="text" class="mailAndPass" id = 'email' name = 'email' placeholder="E-mail"> 
     <input type="password" class="mailAndPass" id = 'password' name="password" placeholder="Password"> 
     <input type="submit" id = 'sign_up' name = 'sign_up_submit' value="Crear cuenta"> 
-   </form>
+   </form> -->
 
- <script type="module" src="main.js"></script>
+ <script type="module" src="app.js"></script>
  <script type="module" src="firebase.js"></script>
 
   
